Create ForestTree Class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,6 @@ project(ADS_midterm_project)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(ADS_midterm_project main.cpp)
+add_executable(ADS_midterm_project main.cpp
+        ForestTree.cpp
+        ForestTree.h)
