--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,5 @@ set(CMAKE_CXX_STANDARD 17)
 
 add_executable(ADS_midterm_project main.cpp
         ForestTree.cpp
-        ForestTree.h)
+        ForestTree.h
+        Account.h)
