--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,17 @@
 cmake-build-debug/
-*.txt
+cmake-build-release/
+
 *.log
+*.txt
 *.cmake
+*.json
+*.cbp
+*.dir
+*.o
+*.a
+*.so
+*.exe
+build.ninja
+
+CMakeCache.txt
+CMakeFiles/
