--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,4 +7,5 @@ add_executable(ADS_midterm_project main.cpp
         ForestTree.cpp
         ForestTree.h
         Account.h
+        TreeNode.cpp
 )
