--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,4 +9,6 @@ add_executable(ADS_midterm_project main.cpp
         Account.h
         TreeNode.cpp
         TreeNode.h
+        Transaction.cpp
+        Transaction.h
 )
