--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,4 +11,5 @@ add_executable(ADS_midterm_project main.cpp
         TreeNode.h
         Transaction.cpp
         Transaction.h
+        Account.cpp
 )
