--- a/.gitignore
+++ b/.gitignore
@@ -13,5 +13,6 @@ cmake-build-release/
 *.exe
 build.ninja
 
+#accountswithspace.txt will add later but so il peps can see the file when pullinh
 CMakeCache.txt
 CMakeFiles/
